--- a/astro-landing-app/src/pages/index.astro
+++ b/astro-landing-app/src/pages/index.astro
@@ -16,12 +16,11 @@ import Content from "../components/Content";
     >
       <div style={{ margin: "auto", width: "fit-content" }}>First View</div>
     </div>
-    <div style={{ background: "black", color: "white" }}>
+    <div style={{ background: "black", color: "white" }} client:idle>
       {
         [...new Array(1000).keys()].map((_, i) => (
           // https://docs.astro.build/ja/reference/directives-reference/#clientvisible
-          // https://docs.astro.build/ja/reference/directives-reference/#clientonly
-          <Content num={i} client:only="react" client:visible />
+          <Content num={i} client:visible />
         ))
       }
     </div>
