--- a/astro-landing-app/src/pages/index.astro
+++ b/astro-landing-app/src/pages/index.astro
@@ -16,7 +16,7 @@ import Content from "../components/Content";
     >
       <div style={{ margin: "auto", width: "fit-content" }}>First View</div>
     </div>
-    <div style={{ background: "black", color: "white" }} client:idle>
+    <div style={{ background: "black", color: "white" }}>
       {
         [...new Array(1000).keys()].map((_, i) => (
           // https://docs.astro.build/ja/reference/directives-reference/#clientvisible
