--- a/astro-landing-app/src/layouts/Layout.astro
+++ b/astro-landing-app/src/layouts/Layout.astro
@@ -9,6 +9,7 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang="ja">
   <head>
+    <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
